# Huffman

./: .gitignore  CMakeLists.txt  README.md  makefile
include/: huffman.h  huffman.hpp
source/: compressor.cpp  decompressor.cpp
src/: CMakeLists.txt  compressor.cpp  decompressor.cpp
test/: test.sh
